--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8"/>
         <title></title>
     </head>
     <body>
+        <Script src="./index.js"></Script>
         <p>Hello u0ujijoWorld</p>
     </body>
 </html>
