--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <title></title>
     </head>
     <body>
-        <Script src="./index.js"></Script>
+        <Script src="../index.html"></Script>
         <p>Hello u0ujijoWorld</p>
     </body>
 </html>
